fixed overflow on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+.main-layout {
+  overflow-x: hidden;
+}
+
 header {
   width: 100%;
   background-color: #2c3639;
